src/objects/Clinical_Clipboard__c.object
<CustomObject>
    <description>Holds items for the scheduling clipboard we implemented</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Clinical Clipboard</relationshipLabel>
        <relationshipName>Clinical_Clipboard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apt_Start_Time__c</fullName>
        <label>Apt Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Clinical Clipboard</relationshipLabel>
        <relationshipName>Clinical_Clipboard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>Clinical Clipboard</relationshipLabel>
        <relationshipName>Clinical_Clipboard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_POT_Apt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient POT Apt</label>
        <referenceTo>Patient_POT_Apt__c</referenceTo>
        <relationshipLabel>Clinical Clipboard</relationshipLabel>
        <relationshipName>Clinical_Clipboard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ready_Time__c</fullName>
        <label>Ready Time</label>
        <type>DateTime</type>
    </fields>
    <label>Clinical Clipboard</label>
    <nameField>
        <displayFormat>CCN-{0000}</displayFormat>
        <label>Clinical Clipboard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Clipboard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>